fixed css fonts and spacing for investment-results.component.ts

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,7 @@
 header {
-  margin: 3rem auto;
+  margin: 0 auto;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   text-align: center;
   height: auto;
 }
