--- a/src/app/investment-results/investment-results.component.css
+++ b/src/app/investment-results/investment-results.component.css
@@ -2,22 +2,22 @@
   text-align: center;
 }
 
-table{
-    max-width: 30rem;
-    margin: 0 auto;
-    margin-bottom: 3rem;
-
-}
-
-th {
+table {
+  max-width: 50rem;
+  margin: 2rem auto;
+  padding: 1rem;
+  table-layout: fixed;
+  border-spacing: 1rem;
   text-align: center;
-  font-size: 0.8rem;
-  color: #84c6b0;
 }
 
-td {
-  text-align: center;
-  font-size: 0.8rem;
-  color: #84c6b0;
+table thead {
+  font-size: 0.7rem;
+  color: #83e6c0;
 }
 
+table tbody {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 0.85rem;
+  color: #c2e9e0;
+}
